adding code to display reservation information